test: verify tracking PD key in message subscriptions
Verifies that process definition keys are tracked in message subscriptions as expected.